--- a/Sources/Plasma/FeatureLib/pfPython/CMakeLists.txt
+++ b/Sources/Plasma/FeatureLib/pfPython/CMakeLists.txt
@@ -18,6 +18,7 @@ set(pfPython_SOURCES
     pyAgeLinkStruct.cpp
     pyAgeVault.cpp
     pyAlarm.cpp
+    pyAsyncTask.cpp
     pyAudioControl.cpp
     pyCCRMgr.cpp
     pyCluster.cpp
@@ -96,6 +97,7 @@ set(pfPython_HEADERS
     cyPhysics.h
     cyPythonInterface.h
     plPythonCallable.h
+    plPythonConvert.h
     pfPythonCreatable.h
     plPythonFileMod.h
     plPythonHelpers.h
@@ -106,6 +108,7 @@ set(pfPython_HEADERS
     pyAgeLinkStruct.h
     pyAgeVault.h
     pyAlarm.h
+    pyAsyncTask.h
     pyAudioControl.h
     pyCCRMgr.h
     pyCluster.h
@@ -189,6 +192,7 @@ set(pfPython_GLUE
     pyAgeInfoStructGlue.cpp
     pyAgeLinkStructGlue.cpp
     pyAgeVaultGlue.cpp
+    pyAsyncTaskGlue.cpp
     pyAudioControlGlue.cpp
     pyClusterGlue.cpp
     pyColorGlue.cpp
